@@ -1,3 +1,7 @@
+Version Next
+
+    - Wait for min_write_delay before access after write error (issue #76)
+
 Version 1.4.4 released February 1, 2017
 
     - Added `--defaultContentEncoding' for non-compliant backends (issue #68)
